<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="MainActivity">

    <!-- FRAME OPPONENT ONE -->

    <RelativeLayout
        android:id="@+id/frame_oppo_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/opo1"
            style="@style/Header"
            android:text="@string/opponent_one" />

        <Button
            android:id="@+id/bodyattack"
            style="@style/MainButton"
            android:layout_below="@id/opo1"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="18dp"
            android:onClick="bodyattack"
            android:text="@string/body_attack" />

        <Button
            android:id="@+id/bodykick"
            style="@style/MainButton"
            android:layout_below="@id/bodyattack"
            android:layout_marginBottom="8dp"
            android:onClick="bodykick"
            android:text="@string/body_spin_kick" />

        <Button
            android:id="@+id/headattack"
            style="@style/MainButton"
            android:layout_below="@id/bodykick"
            android:layout_marginBottom="8dp"
            android:onClick="headattack"
            android:text="@string/head_attack" />

        <Button
            android:id="@+id/caution"
            style="@style/RoundedButton"
            android:layout_below="@id/headattack"
            android:onClick="caution"
            android:text="@string/caution" />

        <Button
            android:id="@+id/botonreset"
            style="@style/RoundedButton"
            android:layout_below="@id/headattack"
            android:layout_marginLeft="83dp"
            android:onClick="botonreset"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textomarcador"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="70dp"
            android:layout_toRightOf="@id/bodykick"
            android:gravity="fill"
            android:paddingLeft="15dp"
            android:text="@string/here_we_go"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/nina"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_alignLeft="@+id/textomarcador"
            android:layout_alignStart="@+id/textomarcador"
            android:layout_below="@+id/marcador"
            android:layout_marginLeft="97dp"
            android:layout_marginStart="97dp"
            android:src="@drawable/nina_tk" />

        <TextView
            android:id="@+id/marcador"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:gravity="fill"
            android:paddingLeft="11dp"
            android:text="0"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <!-- FRAME OPPONENT TWO -->

    <RelativeLayout
        android:id="@+id/frame_oppo_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/opo2"
            style="@style/Header"
            android:layout_marginTop="235dp"
            android:background="#424242"
            android:text="@string/opponent_two" />

        <Button
            android:id="@+id/bodyattack2"
            style="@style/MainButton"
            android:layout_below="@id/opo2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="18dp"
            android:onClick="bodyattack2"
            android:text="@string/body_attack" />

        <Button
            android:id="@+id/bodykick2"
            style="@style/MainButton"
            android:layout_below="@id/bodyattack2"
            android:layout_marginBottom="8dp"
            android:onClick="bodykick2"
            android:text="@string/body_spin_kick" />

        <Button
            android:id="@+id/headattack2"
            style="@style/MainButton"
            android:layout_below="@id/bodykick2"
            android:layout_marginBottom="8dp"
            android:onClick="headattack2"
            android:text="@string/head_attack" />

        <Button
            android:id="@+id/caution2"
            style="@style/RoundedButton"
            android:layout_below="@id/headattack2"
            android:onClick="caution2"
            android:text="@string/caution" />

        <TextView
            android:id="@+id/textomarcador2"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="305dp"
            android:layout_toRightOf="@id/bodykick2"
            android:gravity="fill"
            android:paddingLeft="15dp"
            android:text="@string/come_on"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/marcador2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="305dp"
            android:foregroundGravity="center"
            android:gravity="fill"
            android:paddingLeft="11dp"
            android:text="0"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/botonreset2"
            style="@style/RoundedButton"
            android:layout_below="@id/headattack2"
            android:layout_marginLeft="83dp"
            android:onClick="botonreset"
            android:text="reset"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/nino"
            android:layout_width="130dp"
            android:layout_height="110dp"
            android:layout_alignBottom="@+id/botonreset2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/nino_tk" />

    </RelativeLayout>

</RelativeLayout>